somnambulist update